tests/snapshots/parser_tests__edge_cases__empty_input.snap
---
source: tests/parser_tests.rs
expression: ast
---
Document {
    children: [],
    span: Span {
        start: Position {
            line: 0,
            column: 0,
            offset: 0,
        },
        end: Position {
            line: 0,
            column: 0,
            offset: 0,
        },
    },
}
